--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-icons-all": "^4.5.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
